[gd_scene load_steps=6 format=3 uid="uid://bc7cwbvlkrbfn"]

[ext_resource type="Script" uid="uid://jys4v57hbsxp" path="res://Scripts/sniper.gd" id="1_c0npw"]
[ext_resource type="Texture2D" uid="uid://q2oe6esva63w" path="res://Assets/sprites/pixil-frame-0.png" id="2_up25m"]
[ext_resource type="AudioStream" uid="uid://bigedc4wva1m3" path="res://Assets/Sounds/laser_gunshot.mp3" id="3_h7c71"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jbto"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_56eu1"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(10, 1, 1)
direction = Vector3(0, -1, 0)
spread = 35.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
gravity = Vector3(0, -15, 0)

[node name="WeaponBase" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_c0npw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2jbto")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1000
scale = Vector2(0.324626, 0.324626)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="MagicGlow" type="Sprite2D" parent="."]
z_index = 1000
position = Vector2(2.20962, 6.20962)
scale = Vector2(1.4128, 1.4128)
texture = ExtResource("2_up25m")

[node name="MagicAura" type="GPUParticles2D" parent="."]
position = Vector2(1.20962, 17.2096)
scale = Vector2(1.4128, 1.4128)
amount = 50
lifetime = 2.0
preprocess = 1.5
speed_scale = 0.5
process_material = SubResource("ParticleProcessMaterial_56eu1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h7c71")

[node name="LaserRay" type="RayCast2D" parent="."]
position = Vector2(20, -4)
scale = Vector2(7.02253, -0.0749228)
target_position = Vector2(95, 0)
collision_mask = 3
collide_with_areas = true

[node name="LaserLine" type="Line2D" parent="."]
position = Vector2(20, -4)
width = 3.0
default_color = Color(1, 0, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
